# kirara

./: .gitignore  README.md  downloads.db  main.py  pyproject.toml  results.json  test.py
modules/: base.py  database.py  spider.py  x_spider.py
tests/: playwright_test.py  requests_test.py
utils/: identify_domain.py
