[project]
name = "webscraperproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "scrapy>=2.14.2",
    "scrapy-playwright>=0.0.46",
    "yt-dlp>=2026.3.17",
]
